--- a/flask_app/templates/note.html
+++ b/flask_app/templates/note.html
@@ -14,6 +14,9 @@
             <a href="{{ url_for('get_notes') }}"> My Notes</a> ||
             <a href="{{ url_for('new_note') }}">Add Note</a>
         </nav>
+        <nav>
+            <a href="{{ url_for('logout') }}">Logout</a>
+        </nav>
         <h1>Welcome {{user}} to the 49er Notes App!</h1>
         <h1>Note detials</h1>
 
